# LocationAPI-MCDR

./: .gitignore  .readthedocs.yaml  README.md  README_en.md  clean_pycache.py  manually_tests.py  mcdreforged.plugin.json  pyproject.toml  requirements.docs.txt  requirements.txt  run_tests.py
.github/workflows/: deploy-docs.yaml
docs/: build.sh  build_docs.sh  requirements-docs.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/contents/api/: index.rst  pos.rst
docs/source/contents/api/core/: data_types.rst  index.rst  type_check.rst
docs/source/contents/installation/: index.rst
docs/source/locale/zh_cn/LC_MESSAGES/: api.mo  api.po  index.mo  index.po
docs/source/locales/zh_CN/LC_MESSAGES/: index.po
docs/source/locales/zh_CN/LC_MESSAGES/contents/api/: index.po  mcdr.po  pos.po
docs/source/locales/zh_CN/LC_MESSAGES/contents/api/core/: data_types.po  index.po  type_check.po
docs/source/locales/zh_CN/LC_MESSAGES/contents/develop/: index.po
docs/source/locales/zh_CN/LC_MESSAGES/contents/installation/: index.po
docs/static/css/: theme_overrides.css
docs/static/js/: algolia.js  readthedoc-flyout.js
location_api/: __init__.py  api.py  pos.py  utils.py
location_api/mcdr/: commands.py  entry.py
tests/: test_location_api.py  test_pos_parsing.py
