[project]
name = "location_api"
version = "0.2.2"
description = "An API to define location or positon points."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.20.0",
    "mcdreforged>=2.1.0",
    "moolings-rcon-api>=0.1.0",
    "returns>=0.26.0",
]

[tool.uv.sources]
moolings-rcon-api = { git = "https://github.com/Mooling0602/MoolingsRconAPI-MCDR.git" }
