[project]
name = "location_api"
version = "0.3.0"
description = "An API to define location or position points."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beartype>=0.20.0",
  "mcdreforged>=2.1.0",
  "moolings-rcon-api>=0.1.0",
  "primitive-type>=0.1.0",
  "returns>=0.26.0",
]

[tool.uv.sources]
moolings-rcon-api = { git = "https://github.com/Mooling0602/MoolingsRconAPI-MCDR.git" }

[tool.ruff]
line-length = 79

[dependency-groups]
dev = ["ruff>=0.14.14", "ty>=0.0.14"]
docs = [
  "jieba>=0.42.1",
  "sphinx>=9.0",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc-typehints>=3.6.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.7.0",
  "sphinx-inline-tabs>=2025.12.21.14",
  "sphinx-intl>=2.3.2",
  "sphinx-prompt>=1.10.2",
  "sphinx-rtd-theme>=3.0.0rc1",
  "sphinxcontrib-asciinema>=0.4.3",
  "sphinxcontrib-mermaid>=2.0.0",
]
